--- a/_sass/base/_type.scss
+++ b/_sass/base/_type.scss
@@ -32,7 +32,6 @@ html, body {
   line-height: $line-height * 2;
   margin: $baseline-height*2 0;
   color: $black;
-  letter-spacing: 0;
 }
 .page__subtitle {
   font-family: $tertiary-font-family;
